--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,68 +1,18 @@
-body {
-    font-family: 'Fira Code', monospace;
-    background-color: #1e1e1e;
-    color: #d4d4d4;
-    scroll-behavior: smooth;
-}
+/* Error: Undefined variable.
+ *   ,
+ * 6 |   font-family: $font-stack;
+ *   |                ^^^^^^^^^^^
+ *   '
+ *   assets\scss\partials\_base.scss 6:16  @use
+ *   assets\scss\main.scss 2:1             root stylesheet */
 
-a:hover {
-    color: #61dafb;
-}
-
-.card {
-    border: none;
-    border-radius: 10px;
-}
-
-h2 {
-    border-bottom: 1px solid #444;
-    padding-bottom: .5rem;
-    margin-bottom: 2rem;
-}
-
-.sidebar a.section-link {
-    position: relative;
-    padding-left: 1rem;
-    transition: color 0.3s ease;
-    display: block;
-}
-
-.sidebar a.section-link::before {
-    content: "";
-    position: absolute;
-    top: 0.3rem;
-    left: 0;
-    width: 4px;
-    height: 70%;
-    background-color: #0dcaf0;
-    border-radius: 4px;
-    opacity: 0;
-    transform: scaleY(0.5);
-    transition: all 0.3s ease;
-}
-
-.sidebar a.section-link.active {
-    color: #fff;
-    font-weight: bold;
-}
-
-.sidebar a.section-link.active::before {
-    opacity: 1;
-    transform: scaleY(1);
-}
-
-
-.section-content {
-    opacity: 0;
-    transform: translateX(30px);
-    transition: opacity 1s ease, transform 1s ease;
-    display: none;
-    position: relative;
-}
-
-.section-content.active {
-    display: block;
-    opacity: 1;
-    transform: translateX(0);
-    z-index: 1;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a   \2577 \a 6 \2502    font-family: $font-stack;\d\a   \2502                 ^^^^^^^^^^^\a   \2575 \a   assets\\scss\\partials\\_base.scss 6:16  @use\a   assets\\scss\\main.scss 2:1             root stylesheet";
 }
