--- a/assets/scss/partials/_variables.scss
+++ b/assets/scss/partials/_variables.scss
@@ -2,4 +2,4 @@ $background-color: #1e1e1e;
 $background-color-light: #b1b1b1;
 $primary-text-color: #d4d4d4;
 
-$font-stack: 'Fira Code', monospace;
+$font-stack: 'Fira Code', sans-serif;
